maven setup and smoke test done